[gd_scene load_steps=3 format=3 uid="uid://dxefvxpluci67"]

[ext_resource type="Script" uid="uid://cfh2h4u882ube" path="res://Scripts/VisualizadorRazonamiento.gd" id="1_7qjo3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v120l"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.784314)

[node name="PanelRazonamiento" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7qjo3")

[node name="PanelFondo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v120l")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 600.0
offset_bottom = 400.0

[node name="ContenedorArbol" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="PanelInfo" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EtiquetaInfo" type="Label" parent="PanelInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="BotonCerrar" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Cerrar"
